[tool.poetry]
name = "organizer"
version = "0.1.0"
description = ""
authors = ["Anna Kaplon <anna.kaplon19@o2.pl>"]

[tool.poetry.dependencies]
python = "*"
flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
